@@ -5,6 +5,7 @@ CHANGELOG Roundcube Webmail
 - Fix issue when default_addressbook option is set to integer value (#1489407)
 - Fix Opera > 15 detection (#1489562)
 - Fix security issue in DomainFactory driver of Password plugin
+- Fix invalid X-Draft-Info on forwarded message draft (#1489587)
 
 RELEASE 1.0-rc
 --------------
